# cam-srvo

./: .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  camera.c  camera.h  config.h  http_server.c  http_server.h  idf_component.yml  main.c  servo.c  servo.h  wifi.c  wifi.h
