idf_component_register(
    SRCS
        "main.c"
        "camera.c"
        "servo.c"
        "wifi.c"
        "http_server.c"
    INCLUDE_DIRS "."
    REQUIRES
        esp_wifi
        esp_http_server
        esp_timer
        nvs_flash
        driver
        esp_psram
        log
    PRIV_REQUIRES
        esp_camera
)
